--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
             };
             scan();
         }
+
+        // Automatically start the camera when page loads
+        window.onload = () => {
+            startCamera();
         };
     </script>
 </body>
