--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
             margin-top: 20px;
             font-size: 20px;
         }
+        /* Style for the movable button */
+        #moveableButton {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            padding: 10px 20px;
+            font-size: 16px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            z-index: 100;
+        }
     </style>
 </head>
 <body>
@@ -96,6 +110,45 @@
         // Automatically start the camera when the page loads
         window.onload = () => {
             startCamera();
+        };
+
+        // Function to open a website when button is clicked
+        function openWebsite() {
+            window.open("https://murvyn4.github.io/Qr-scanner/", "_blank");
+        }
+    </script>
+
+    <!-- Moveable Button -->
+    <button id="moveableButton" onclick="openWebsite()">Open Website</button>
+
+    <script>
+        // Make the button draggable
+        const moveableButton = document.getElementById("moveableButton");
+        moveableButton.onmousedown = function(event) {
+            let shiftX = event.clientX - moveableButton.getBoundingClientRect().left;
+            let shiftY = event.clientY - moveableButton.getBoundingClientRect().top;
+
+            moveButton(event.pageX, event.pageY);
+
+            function moveButton(pageX, pageY) {
+                moveableButton.style.left = pageX - shiftX + 'px';
+                moveableButton.style.top = pageY - shiftY + 'px';
+            }
+
+            function onMouseMove(event) {
+                moveButton(event.pageX, event.pageY);
+            }
+
+            document.addEventListener('mousemove', onMouseMove);
+
+            moveableButton.onmouseup = function() {
+                document.removeEventListener('mousemove', onMouseMove);
+                moveableButton.onmouseup = null;
+            };
+        };
+
+        moveableButton.ondragstart = function() {
+            return false;
         };
     </script>
 </body>
