--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QR Code Reader</title>
+    <title>QR Code Reader with PiP</title>
     <style>
         video {
             width: 100%;
@@ -27,10 +27,9 @@
             display: none;
             z-index: 100;
         }
-        #moveableButton {
+        #moveableButton, #pipButton {
             position: fixed;
             bottom: 20px;
-            right: 20px;
             padding: 10px 20px;
             font-size: 16px;
             background-color: #4CAF50;
@@ -39,6 +38,12 @@
             border-radius: 5px;
             cursor: pointer;
             z-index: 100;
+        }
+        #moveableButton {
+            right: 20px;
+        }
+        #pipButton {
+            left: 20px;
         }
     </style>
 </head>
@@ -53,6 +58,7 @@
         const video = document.getElementById('video');
         const qrResult = document.getElementById('qr-result');
         const notification = document.getElementById('notification');
+        const pipButton = document.getElementById('pipButton');
         let streamStarted = false;
 
         // Ask for camera permission and start the scanning process
@@ -168,13 +174,30 @@
             
             xhr.send();
         }
+
+        // Enable Picture-in-Picture mode for the video
+        pipButton.addEventListener('click', async () => {
+            try {
+                if (video !== document.pictureInPictureElement) {
+                    await video.requestPictureInPicture();
+                    pipButton.textContent = 'Exit PiP';
+                } else {
+                    await document.exitPictureInPicture();
+                    pipButton.textContent = 'Enter PiP';
+                }
+            } catch (error) {
+                console.error('Error with PiP:', error);
+            }
+        });
+
     </script>
 
     <!-- Moveable Button -->
     <button id="moveableButton" onclick="openWebsite()">Open Website</button>
+    <button id="pipButton">Enter PiP</button>
 
     <script>
-        // Make the button draggable
+        // Make the moveable button draggable
         const moveableButton = document.getElementById("moveableButton");
         moveableButton.onmousedown = function(event) {
             let shiftX = event.clientX - moveableButton.getBoundingClientRect().left;
