--- a/index.html
+++ b/index.html
@@ -100,8 +100,9 @@
                     if (qrCode) {
                         qrResult.textContent = `QR Code Data: ${qrCode.data}`;
                         
-                        // Check if the QR code data is a URL and redirect to it
+                        // Check if the QR code data is a URL and show notification
                         if (isValidURL(qrCode.data)) {
+                            qrResult.textContent = `Scanned URL: ${qrCode.data}`;
                             showNotification("URL scanned successfully!");
                             window.location.href = qrCode.data; // Redirect to the URL in the same page
                         } else {
